force-app/main/default/objects/Subscription_Item__c/fields/Unit_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Annual_Price__c</fullName>
    <label>Unit Annual Price</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>