force-app/main/default/objects/Subscription_Item__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <description>Product2 does not allow restricted-delete lookups, so the field cannot be schema-required; this rule provides the same guarantee at the data layer.</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Every subscription item must reference a product.</errorMessage>
</ValidationRule>