force-app/main/default/objects/Subscription_Item__c/validationRules/Quantity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Positive</fullName>
    <active>true</active>
    <description>Zero or negative quantities corrupt the ARR roll-up; credits are modeled in billing, not here.</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>